frontend/test/should_pass/emit_005.grg
using attrib_model_001;

rule r1 {
  x:NINT;
  negative { x <-- ; }
  modify{
    emit("(", 2 * x.a, ")", exec(r2(x)));
  }
}

rule r2(x:Node) {
  x -e:ESTRING-> y:NINT;
  modify {
    delete(x);
    emit(" -", (y.a>42)?45:4.2, (y.a>42)?4.5:42, "-> (", y.a, ")", exec(r2(y)), e.a);
  }
}
