frontend/test/should_fail/ret_002b.grg
rule r : (Node, Node) {
	x: Node;
	y: Node;

	modify {
		delete(x);
		return(nameof(x) < nameof(y) ? x : y, y);
	}
}

